--- a/dict_engine/simple_dict/templates/simple_dict/base_screen.html
+++ b/dict_engine/simple_dict/templates/simple_dict/base_screen.html
@@ -1,1 +1,15 @@
 {% extends 'base.html' %}
+
+{% block admin-panel %}
+    <div class="dropdown">
+      <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+        Create
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <li><a class="dropdown-item" href="#">Post</a></li>
+        <li><a class="dropdown-item" href="#">Tag</a></li>
+      </ul>
+    </div>
+    <a href="{{admin_object.update_absolute_url}}" class="btn btn-light edit" style="{% if detail %}display:block;{% endif %}">Edit</a>
+    <a href="{{admin_object.delete_absolute_url}}" class="btn btn-danger delete" style="{% if detail %}display:block;{% endif %}">Delete</a>
+{% endblock %}
