--- a/dict_engine/simple_dict/templates/simple_dict/base_screen.html
+++ b/dict_engine/simple_dict/templates/simple_dict/base_screen.html
@@ -6,7 +6,7 @@
         Create
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="#">Post</a></li>
+        <li><a class="dropdown-item" href="{% url 'create_user_word_url' %}">UserWord</a></li>
         <li><a class="dropdown-item" href="#">Tag</a></li>
       </ul>
     </div>
