--- a/dict_engine/simple_dict/templates/simple_dict/includes/userword_card_detail.html
+++ b/dict_engine/simple_dict/templates/simple_dict/includes/userword_card_detail.html
@@ -1,19 +1,22 @@
 <div class="card mb-4">
-              <h5 class="card-header">{{user_word.date_add}}</h5>
+<!--              <h5 class="card-header">{{post.date_pub}}</h5>-->
               <div class="card-body">
-                <h5 class="card-title">Слово - {{user_word.word.word}}</h5>
-                <h5 class="card-title">Перевод - {{user_word.word.translate}}</h5>
-                <p class="card-text">{{user_word.word.word_example}}</p>
-<!--                <a href="#" class="btn btn-light">Add</a>-->
-                  <form method="post">
-                      {% csrf_token%}
-                      <input type="submit" value="Add"  class="btn btn-light">
-                  </form>
+                <h5 class="card-title">Слово - {{user_word.word}}</h5>
+                  {% for word in user_word.userworddetail_set.all %}
+                <h5 class="card-title">Перевод - {{word.translate}}</h5>
+                <p class="card-text">{{word.word_example}}</p>
+                  {% endfor %}
+                <a href="{{user_word.get_absolute_url}}" class="btn btn-light">Detail</a>
+<!--                  <form method="post">-->
+<!--                      {% csrf_token%}-->
+<!--                      <input type="submit" value="Add"  class="btn btn-light">-->
+<!--                  </form>-->
+
               </div>
 <!--                <div class="card-footer text-muted">-->
 <!--                Tags:-->
 <!--                    {% for tag in post.tags.all %}-->
 <!--                        <a href="{{tag.get_absolute_url}}">{{tag.title}}</a>-->
-<!--                       {% endfor %}-->
+<!--                    {% endfor %}-->
 <!--                </div>-->
 </div>
